--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,17 +7,24 @@ services:
     depends_on:
       postgres:
          condition: service_healthy
+    environment:
+      - DATABASE_URL=postgresql+asyncpg://pguser:pgpass@0.0.0.0:54321/appdb
+      - APP_PORT=8000
     networks:
       - backend
   postgres:
-    image: "postgres:13-alpine"
+    image: "postgres:13.3"
     restart: always
     environment:
-      POSTGRES_DB: "postgres"
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "postgres"
-    expose:
-      - 54321
+      POSTGRES_DB: appdb
+      POSTGRES_USER: pguser
+      POSTGRES_PASSWORD: pgpass
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 15s
+      timeout: 10s
+      retries: 3
+      start_period: 12s
     ports:
       - "54321:5432"
     volumes:
